# MatteoAnnunziata_ProgettoLaboratorio

./: CMakeLists.txt  Item.cpp  Item.h  Observer.h  ShoppingList.cpp  ShoppingList.h  Subject.h  User.cpp  User.h  main.cpp
Test/: CMakeLists.txt  ItemTest.cpp  ShoppingListFixture.cpp  UserFixture.cpp  runAllTests.cpp
Test/lib/googletest-main/: CMakeLists.txt
Test/lib/googletest-main/.github/workflows/: gtest-ci.yml
Test/lib/googletest-main/googlemock/: CMakeLists.txt
Test/lib/googletest-main/googlemock/src/: gmock-cardinalities.cc  gmock-internal-utils.cc  gmock-matchers.cc  gmock-spec-builders.cc  gmock.cc  gmock_main.cc
Test/lib/googletest-main/googlemock/test/: gmock-actions_test.cc  gmock-cardinalities_test.cc  gmock-function-mocker_test.cc  gmock-internal-utils_test.cc  gmock-matchers-arithmetic_test.cc  gmock-matchers-comparisons_test.cc  gmock-matchers-containers_test.cc  gmock-matchers-misc_test.cc  gmock-matchers_test.h  gmock-more-actions_test.cc  gmock-nice-strict_test.cc  gmock-port_test.cc  gmock-spec-builders_test.cc  gmock_link_test.h  gmock_output_test_.cc  gmock_stress_test.cc  gmock_test.cc
Test/lib/googletest-main/googletest/: CMakeLists.txt
Test/lib/googletest-main/googletest/cmake/: internal_utils.cmake
Test/lib/googletest-main/googletest/samples/: prime_tables.h  sample10_unittest.cc  sample1_unittest.cc  sample2_unittest.cc  sample3_unittest.cc  sample4_unittest.cc  sample5_unittest.cc  sample6_unittest.cc  sample7_unittest.cc  sample8_unittest.cc  sample9_unittest.cc
Test/lib/googletest-main/googletest/src/: gtest-death-test.cc  (+9 more)
(+79 files in other folders)
